Fixed error in opcode 0x7XNN, and made colors better.
Fixed error in opcode 0x7XNN, and made colors better.

--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,10 @@
 <html>
 	<header>
 	</header>
-	<body>
-		<div id="drop_zone" style="border:3px dotted #000000; padding: 20px 5px; width: 640px; margin-bottom: 20px; text-align: center;">Drop files here</div>
+	<body style="background-color: #1c1c1c; color: #555555;">
+		<div id="drop_zone" style="border:3px dotted #555555; padding: 20px 5px; width: 630px; margin-bottom: 20px; text-align: center;">Drop files here</div>
 	
-		<canvas id="screen" width="640" height="320" style="border:1px solid #000000;"></canvas>
+		<canvas id="screen" width="640" height="320" style="border: 3px solid #555555;"></canvas>
 	
 		<script src="js/main.js"></script>
 	</body>
