Added custom controls for BRIX, INVADERS, and PONG
I'm in the process of adding custom controls for a lot of games.

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,8 @@
 	<body style="background-color: #1c1c1c; color: #555555;">
 		<div id="drop_zone" style="border:3px dotted #555555; padding: 20px 5px; width: 630px; margin-bottom: 20px; text-align: center;">Drop files here</div>
 	
-		<canvas id="screen" width="640" height="320" style="border: 3px solid #555555;"></canvas>
+		<canvas id="screen" width="640" height="320" style="border: 3px solid #555555; float: left; margin-right: 20px;"></canvas>
+		<div id="controls">No game loaded.</div>
 	
 		<script src="js/main.js"></script>
 	</body>
