SaveState/Cleanup done
I added savestates, and cleaned up the code some.

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
 		<canvas id="screen" width="640" height="320" style="border: 3px solid #555555; float: left; margin-right: 20px;"></canvas>
 		<div id="controls">No game loaded.</div>
 	
+		<script src="js/chip8.js"></script>
 		<script src="js/main.js"></script>
 	</body>
 </html>
